after fixing weights

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 
 body {
   font-family: 'Courier New', 'Segoe UI', 'Roboto', sans-serif;
-  font-family: 'Corbel', monospace !important;
+  font-family: 'Trebuchet MS', monospace !important;
   font-optical-sizing: auto;
   font-weight: 600;
   background-color: #f8f9fa;
